# raas-garba.github.io

./: .buildinfo  .editorconfig  404.html  README.md  ekatra.sty  flake.nix  genindex.html  index.html  lohit.sty  mkdocs.yml  mklinks.py  objects.inv  pr2html.css  pr2html.sh  pyproject.toml  run  search.html  searchindex.js
.github/workflows/: ci.yml  pages.yml
By Year/2013/: schedule.yml
By Year/2014/: schedule.yml
By Year/2018/: schedule.yml
By Year/2019/: schedule.yml
_sources/: index.rst.txt
docs/: .nav.yml  Makefile  conf.py  index.md  index.rst  mklinks.py
docs/prior_years/: 2019.toml
docs/ભજન/: एकदंताय वक्रतुण्डाय.md  छोटी छोटी गैया.md  मीठे रस से भरी रे.md  મારા ઘટમાં બિરાજતા.md  રઘુપતિ રાઘવ.md
docs/શ્લોક-આરતી/: कर्पूरगौरं.md  गीता पञ्चदशोऽध्यायः.md  जय जगदीश हरे.md  महिषासुरमर्दिनि स्तोत्रम्.md  या कुन्देन.md  वक्रतुण्ड महाकाय.md  જય આદ્યાશક્તિ.md  વિશ્વંભરી.md
lib/bollywood/: index.html
lib/ભજન/: index.html  एकदंताय वक्रतुण्डाय.html  छोटी छोटी गैया.html  मीठे रस से भरी रे.html  મારા ઘટમાં બિરાજતા.html  રઘુપતિ રાઘવ.html
lib/રાસ-ગરબા/: index.html
lib/શ્લોક-આરતી/: index.html  कर्पूरगौरं.html  गीता पञ्चदशोऽध्यायः.html  जय जगदीश हरे.html  महिषासुरमर्दिनि स्तोत्रम्.html  या कुन्देन.html  वक्रतुण्ड महाकाय.html  सुखकर्ता दुखहर्ता.html  જય આદ્યાશક્તિ.html  વિશ્વંભરી.html
prior_years/: 2013.toml  2014.toml  2015.toml  2016.toml  2017.toml  2018.toml
search/: search_index.json
year/2013/: index.html
year/2014/: index.html
year/2015/: index.html
year/2016/: index.html
year/2017/: index.html
year/2018/: index.html
(+2372 files in other folders)
